//==========================================================================
//
// History file for EvtGen
//
//===========================================================================

9th Mar 2020 John Back
    Add EvtAbsExternalGen::getDecayProb() to allow external generators to
    return a probability that can be used in EvtDecayProb (default = 1).

6th Mar 2020 Andrii Verbytskyi and Tom Latham
    Implement HepMC3 support: EvtHepMCEvent, external engines & cmake files.

15th Nov 2019 John Back
    Added EvtPsi2JpsiPiPi model for psi2S -> J/psi pi+ pi- decays based on 
    hep-ph/1507.07985, courtesy of Aleksei Luchinsky (LHCb).

21st August 2019 Michal Kreps
    Added the EvtDToKpienu decay model for D -> K pi e nu decays from
    BESIII, courtesy of Liaoyuan Dong.

16th July 2019 John Back
    Correct imaginary sign for EvtComplex /= (EvtComplex c) operator.

3rd July 2019 John Back
    Added the EvtLambdacPHH decay model for Lc -> p K pi decays with K*(890), 
    Delta++(1232) and Lambda(1520) resonances, based on the Fermilab E791
    analysis hep-ex/9912003v1, courtesy of Elisabeth Niel and Patrick Robbe 
    (LHCb). Modified EvtResonance2 to accept other barrier factor radii.

3rd July 2019 Michal Kreps
    Make sure minimum mass for resonances with non-zero widths is larger than
    1e-4 GeV in EvtRelBreitWignerBarrierFact.

3rd May 2019 John Back
    Corrected EvtSLDiBaryonAmp bugs/issues in the BToDiBaryonlnupQCD model: 
    parity, amplitude terms and B momentum reference frame variables.    
    Corrected treament of spinor indices in EvtRareLb2Lll, courtesy of
    Tom Blake and Michal Kreps (LHCb).
    Updated the EvtBcVHad model to also handle Bc -> psi Ks K decays, 
    courtesy of Aleksei Luchinsky (LHCb).
    Add new decay model EvtBsMuMuKK (BS_MUMUKK) for Bs to J/psi (mu+mu-) K+K-,
    courtesy of Veronika Chobanova, Jeremy Dalseno, Diego Martinez Santos and
    Marcos Romero Lamas (LHCb).